Fix quiz index word-wrap

--- a/public/styles/_quiz_index.scss
+++ b/public/styles/_quiz_index.scss
@@ -6,6 +6,7 @@
   min-height: 10rem;
   padding: 1rem;
   margin-bottom: 0.5rem;
+  word-wrap: break-word;
   p {
     color: $white;
   }
